# update-pip-project

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  update_packages.sh
.github/workflows/: python-app.yml
tests/: test_update_packages.py  test_update_pip.py
update_project/: __init__.py  main.py  update_app.py  update_packages.py  update_pip.py  utils.py
