[tool.poetry]
name = "update-pip-packages"
version = "0.1.5"
description = ""
authors = ["OleksandrMakarov"]
readme = "README.md"
packages = [{include = "update_project"}]

[tool.poetry.dependencies]
python = "^3.8.1"
distro = "^1.8.0"

[tool.poetry.scripts]
update-pip-packages = "update_project.main:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
autopep8 = "^2.0.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
